force-app/main/default/objects/Incident/fields/Action_Item2__c.field-meta.xml
<CustomField>
    <fullName>Action_Item2__c</fullName>
    <label>Action Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>