force-app/main/default/objects/Incident/fields/Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Action_Items__c</fullName>
    <label>Action Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>