force-app/main/default/objects/Incident/fields/Alasan_Kembali2__c.field-meta.xml
<CustomField>
    <fullName>Alasan_Kembali2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alasan Kembali</label>
    <length>255</length>
    <type>Text</type>
</CustomField>