force-app/main/default/objects/Incident/fields/Alasan_kembali_membuka_tiket_IT__c.field-meta.xml
<CustomField>
    <fullName>Alasan_kembali_membuka_tiket_IT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alasan kembali membuka tiket IT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>