force-app/main/default/objects/Incident/fields/CI_Ditemukan__c.field-meta.xml
<CustomField>
    <fullName>CI_Ditemukan__c</fullName>
    <label>CI Ditemukan ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tidak</fullName>
            </value>
            <value>
                <fullName>Ya</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>