force-app/main/default/objects/Incident/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Close Date</label>
    <type>DateTime</type>
</CustomField>