force-app/main/default/objects/Incident/fields/Hold_Justification__c.field-meta.xml
<CustomField>
    <fullName>Hold_Justification__c</fullName>
    <inlineHelpText>alasan status unhold pada iRis</inlineHelpText>
    <label>Hold Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>