force-app/main/default/objects/Incident/fields/Impact_Read__c.field-meta.xml
<CustomField>
    <fullName>Impact_Read__c</fullName>
    <formula>Text(Impact)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impact</label>
    <type>Text</type>
</CustomField>