force-app/main/default/objects/Incident/fields/Incident_Number_IRIS__c.field-meta.xml
<CustomField>
    <fullName>Incident_Number_IRIS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Incident Number (IRIS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>