force-app/main/default/objects/Incident/fields/Informasi_Detail_Nasabah__c.field-meta.xml
<CustomField>
    <fullName>Informasi_Detail_Nasabah__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Informasi Detail Nasabah</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>