force-app/main/default/objects/Incident/fields/IRIS_Number2__c.field-meta.xml
<CustomField>
    <fullName>IRIS_Number2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IRIS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>