force-app/main/default/objects/Incident/fields/IRIS_Number__c.field-meta.xml
<CustomField>
    <fullName>IRIS_Number__c</fullName>
    <label>IRIS Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>