force-app/main/default/objects/Incident/fields/ITSM_Total_SLA_Iris__c.field-meta.xml
<CustomField>
    <fullName>ITSM_Total_SLA_Iris__c</fullName>
    <label>Total SLA Tiket Bricare</label>
    <length>100</length>
    <type>Text</type>
</CustomField>