force-app/main/default/objects/Incident/fields/Layanan_Terdampak__c.field-meta.xml
<CustomField>
    <fullName>Layanan_Terdampak__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Layanan  Terdampak</label>
    <length>200</length>
    <type>Text</type>
</CustomField>