force-app/main/default/objects/Incident/fields/Nomor_tiket_iRIS__c.field-meta.xml
<CustomField>
    <fullName>Nomor_tiket_iRIS__c</fullName>
    <externalId>true</externalId>
    <label>RecId tiket iRIS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>