force-app/main/default/objects/Incident/fields/Remark_History__c.field-meta.xml
<CustomField>
    <fullName>Remark_History__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remark History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>