force-app/main/default/objects/Incident/fields/Reopen_Date__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Date__c</fullName>
    <label>Reopen Date</label>
    <type>DateTime</type>
</CustomField>