force-app/main/default/objects/Incident/fields/Reopen_Justification__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Justification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reopen Justification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>