force-app/main/default/objects/Incident/fields/Reopen_Status__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Status__c</fullName>
    <label>Reopen Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Accept</fullName>
                <isActive>false</isActive>
                <label>Accept</label>
            </value>
            <value>
                <fullName>Reject</fullName>
                <isActive>false</isActive>
                <label>Reject</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>