force-app/main/default/objects/Incident/fields/Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Type__c</fullName>
    <label>Resolution Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>