force-app/main/default/objects/Incident/fields/Root_Cause2__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Root Cause</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>