force-app/main/default/objects/Incident/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AutoTicket</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Diinfokan oleh pengguna layanan</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Event Monitor</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>FrontRange Voice</fullName>
            </value>
            <value>
                <fullName>Instant Message</fullName>
            </value>
            <value>
                <fullName>Microsoft Teams</fullName>
            </value>
            <value>
                <fullName>Monitoring Tools</fullName>
            </value>
            <value>
                <fullName>Network Monitor</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Self Service</fullName>
            </value>
            <value>
                <fullName>Self-Service Portal</fullName>
            </value>
            <value>
                <fullName>Service Desk</fullName>
            </value>
            <value>
                <fullName>Voice Mail</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
            <value>
                <fullName>BRICare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>