force-app/main/default/objects/Incident/fields/Subject_Read__c.field-meta.xml
<CustomField>
    <fullName>Subject_Read__c</fullName>
    <formula>Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject</label>
    <type>Text</type>
</CustomField>