force-app/main/default/objects/Incident/fields/Tipe_Insiden__c.field-meta.xml
<CustomField>
    <fullName>Tipe_Insiden__c</fullName>
    <label>Tipe Insiden</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Issue</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Data Issue</fullName>
            </value>
            <value>
                <fullName>Data Warehouse</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Digital Channel</fullName>
            </value>
            <value>
                <fullName>Fraud/Application Bug</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Human Error</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Infrastructure Computing</fullName>
            </value>
            <value>
                <fullName>Infrastructure DC Facilities</fullName>
            </value>
            <value>
                <fullName>Infrastructure Network</fullName>
            </value>
            <value>
                <fullName>Infrastructure Satellite</fullName>
            </value>
            <value>
                <fullName>Mobile Apps</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Not Yet Identified</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Resource Full</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Security &amp; Firewall</fullName>
            </value>
            <value>
                <fullName>Security Infrastructure</fullName>
            </value>
            <value>
                <fullName>Security Platform</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Web Apps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>