force-app/main/default/objects/Incident/fields/Total_SLA__c.field-meta.xml
<CustomField>
    <fullName>Total_SLA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total SLA IRis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>