force-app/main/default/objects/Incident/fields/Total_SLA_Tiket_Bricare_Read__c.field-meta.xml
<CustomField>
    <fullName>Total_SLA_Tiket_Bricare_Read__c</fullName>
    <formula>ITSM_Total_SLA_Iris__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total SLA Tiket Bricare</label>
    <type>Text</type>
</CustomField>