force-app/main/default/objects/Incident/fields/Un_Hold_Justification__c.field-meta.xml
<CustomField>
    <fullName>Un_Hold_Justification__c</fullName>
    <inlineHelpText>Alasan unhold</inlineHelpText>
    <label>Un-Hold Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>