force-app/main/default/objects/Incident/fields/Un_Hold_Status__c.field-meta.xml
<CustomField>
    <fullName>Un_Hold_Status__c</fullName>
    <label>Un-Hold Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>