force-app/main/default/objects/Incident/validationRules/Status_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Closed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  ISPICKVAL(Status, &quot;Closed&quot;)
)</errorConditionFormula>
    <errorMessage>Tiket yang sudah closed tidak bisa diedit</errorMessage>
</ValidationRule>