force-app/main/default/objects/Incident/listViews/Copy_of_All_Incidents_Default.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Incidents_Default</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Description</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedDate</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Copy of All Incidents (Default)</label>
</ListView>