force-app/main/default/objects/Incident/listViews/Hold_Ticket_Dikembalikan.listView-meta.xml
<ListView>
    <fullName>Hold_Ticket_Dikembalikan</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <columns>Category</columns>
    <columns>SubCategory</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Dikembalikan</value>
    </filters>
    <label>Hold Ticket (Dikembalikan)</label>
</ListView>